--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,115 +1,173 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    color: #000;
-    font-family: Arial, Helvetica, sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .app {
-    width: 100%;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url('../images/background.jpg');
-    background-position: center;
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../images/background.jpg");
+  background-position: top;
 }
 .container {
-    width: 90%;
-    margin: 0 auto;
+  width: 90%;
+  display: block;
+  margin: 0 auto;
 }
 .navigation {
-    display: flex;
-    flex: 1;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
-    margin: 0 20px;
+  width: 100%;
+  display: flex;
+  flex: 1;
+  justify-content: space-between !important;
+  align-items: center !important;
+  height: 60px;
+  background: #fff;
+  padding: 0 20px;
+  box-shadow: 2px 0 10px 0 #000;
+  position: sticky;
+  top: 0;
+  z-index: 5;
+}
+.menu {
+  display: none;
+}
+.logo-link {
+  text-decoration: none;
+  /* margin-left: 20px; */
 }
 
 .logo {
-    color: #B23838;
-    font-size: 20px;
-    font-style: italic;
-    font-weight: 600;
-    text-transform: capitalize;
-    cursor: pointer;
+  color: #b23838;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 600;
+  text-transform: capitalize;
+  cursor: pointer;
 }
 .links {
-    display: flex;
-    flex: 1;
-    justify-content: center;
+  display: flex;
+  flex: 1;
+  justify-content: center;
 }
 .link {
-    list-style: none;
-    margin-left: 30px;
-    text-transform: capitalize;
-    font-size: 15px;
-    cursor: pointer;
+  text-decoration: none;
+  margin-left: 30px;
+  text-transform: capitalize;
+  font-size: 15px;
+  cursor: pointer;
 }
-.signin, .signup {
-    font-size: 15px;
+.link:hover {
+  text-decoration: underline;
+}
+.signin,
+.signup {
+  font-size: 15px;
 }
 .signin {
-    background: #B23838;
-    padding: 8px 12px;
-    color: #fff;
+  background: #b23838;
+  padding: 8px 12px;
+  color: #fff;
 }
 .signup {
-    margin-left: 10px;
-    border: 2px solid #B23838;
-    padding: 6px 10px;
+  margin-left: 10px;
+  border: 2px solid #b23838;
+  padding: 6px 10px;
 }
-.signin:hover{
-    border: 2px solid #B23838;
-    padding: 6px 10px;
-    color: #000;
-    background: none;
-    cursor: pointer;
+.signin:hover {
+  border: 2px solid #b23838;
+  padding: 6px 10px;
+  color: #000;
+  background: none;
+  cursor: pointer;
 }
-.signup:hover{
-    background: #B23838;
-    padding: 6px 10px;
-    color: #fff;
-    cursor: pointer;
+.signup:hover {
+  background: #b23838;
+  padding: 6px 10px;
+  color: #fff;
+  cursor: pointer;
 }
 .content {
-    display: flex;
-    justify-content: space-between;
-    margin: 150px 20px 0 20px;
+  display: flex;
+  justify-content: space-between;
+  margin: 150px 120px 0 120px;
 }
 .text_content {
-    max-width: 400px;
+  max-width: 400px;
 }
 .text_content h2 {
-    font-size: 40px;
-    margin-bottom: 20px;
+  font-size: 40px;
+  margin-bottom: 20px;
+  color: #b23838;
 }
 .input {
-    width: 350px;
-    height: auto;
-    background: #E7EBF4;
-    margin-right: 100px;
-    margin-top: -30px;
+  width: 350px;
+  height: auto;
+  background: #e7ebf4;
+  margin-right: 150px;
+  margin-top: -30px;
 }
 .input-content {
-    margin: 20px;
+  margin: 20px;
 }
 .input-content p {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 .input-content input {
-    width: 100%;
-    height: 30px;
-    border: none;
-    outline: none;
-    margin-bottom: 10px;
-    padding-left: 5px;
+  width: 100%;
+  height: 30px;
+  border: none;
+  outline: none;
+  margin-bottom: 10px;
+  padding-left: 5px;
+}
+.input-content input:focus-within {
+  outline: 1px solid #b23838;
 }
 .input-content button {
-    padding: 5px 10px;
-    background: #B23838;
-    border: none;
-    outline: none;
-    margin-top: 10px;
+  padding: 5px 10px;
+  background: #b23838;
+  border: none;
+  outline: none;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .app {
+    width: 100%;
+    background: #fff;
+  }
+  .links {
+    display: none;
+  }
+  .content {
+    align-items: center;
+    flex-direction: column;
+    margin: 20px auto;
+  }
+  .text_content {
+    max-width: 350px;
+  }
+  .input {
+    width: 350px;
+    height: auto;
+    background: #eff0f3;
+    margin: 30px auto;
+  }
+  .signin,
+  .signup {
+    display: none;
+  }
+  .menu {
+    display: block;
+    width: 30px;
     cursor: pointer;
+  }
+  .menu img {
+    color: #b23838;
+  } 
 }
