--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -136,10 +136,15 @@
   cursor: pointer;
 }
 
+
 @media screen and (max-width: 768px) {
   .app {
     width: 100%;
     background: #fff;
+  }
+  .container {
+    width: 100%;
+    margin: 0 auto;
   }
   .links {
     display: none;
@@ -151,6 +156,41 @@
   }
   .text_content {
     max-width: 350px;
+    text-align: center;
+  }
+  .text_content h2 {
+    font-size: 30px;
+    font-weight: bolder;
+  }
+  .text_content p {
+    font-weight: bold;
+    font-weight: 30px;
+    margin-bottom: 40px;
+  }
+  .text_content input {
+    border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+    border: none;
+    outline: none;
+    height: 60px;
+    width: 350px;
+  }
+  .text_content input::placeholder {
+    font-size: 15px;
+    color: gray;
+    font-style: italic;
+  }
+  .text_content button {
+    width: 60px;
+    height: 60px;
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+    margin-top: 0;
+  }
+  .search-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .input {
     width: 350px;
@@ -170,4 +210,22 @@
   .menu img {
     color: #b23838;
   } 
+  .image-container {
+    background: url("../images/background.jpg");
+    width: 95%;
+    height: 400px;
+    margin: -5px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+  }
+  .image-container span {
+    margin: 20px auto;
+    height: auto;
+  }
+  .image-container img {
+    width: 100%;
+    height: 300px;
+  }
 }
