--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -192,6 +192,33 @@
     align-items: center;
     justify-content: center;
   }
+  .bottom-text {
+    width: 100%;
+    margin: 40px auto;
+    display: block;
+    text-align: center;
+  }
+  .bottom-text img {
+    width: 128px;
+    height: 128px;
+  }
+  .bottom-text h1 {
+    text-transform: capitalize;
+    font-size: 30px;
+    max-width: 50%;
+    line-height: 40px;
+    margin: 0 auto;
+  }
+  .bottom-text p {
+    max-width: 250px;
+    margin: 0 auto;
+    color: rgb(27, 26, 26);
+  }
+  .bottom-text button {
+    width: 120px;
+    padding: 10px 20px;
+    border-radius: 8px;
+  }
   .input {
     width: 350px;
     height: auto;
