--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -180,7 +180,7 @@
     color: gray;
     font-style: italic;
   }
-  .text_content button {
+  .search-button {
     width: 60px;
     height: 60px;
     border-bottom-right-radius: 8px;
