--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -8,13 +8,9 @@
 .app {
   width: 100%;
   height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url("../images/background.jpg");
-  background-position: top;
 }
 .container {
-  width: 90%;
+  width: 100%;
   display: block;
   margin: 0 auto;
 }
@@ -90,18 +86,95 @@
   color: #fff;
   cursor: pointer;
 }
+.image-container {
+  width: 98%;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../images/background.jpg");
+  background-position: top;
+  border-radius: 10px;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .content {
   display: flex;
-  justify-content: space-between;
-  margin: 150px 120px 0 120px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
 }
 .text_content {
-  max-width: 400px;
+  max-width: 700px;
+  font-weight: 900;
 }
 .text_content h2 {
-  font-size: 40px;
+  font-size: 50px;
   margin-bottom: 20px;
   color: #b23838;
+}
+.text_content p {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.search-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.search-container input {
+  width: 70%;
+  height: 60px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border: none;
+  outline: none;
+  margin-top: 0;
+}
+.search-container input::placeholder {
+  font-size: 20px;
+  font-style: italic;
+  padding: 0 10px;
+}
+.search-button {
+  width: 70px;
+  height: 60px;
+  margin-top: 0;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.bottom-text-container {
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto;
+  text-align: center;
+}
+.content h1 {
+  margin-top: 60px;
+} 
+.bottom-text {
+  padding: 0 30px;
+}
+.bottom-text img {
+  width: 128px;
+  height: 128px;
+}
+.bottom-text p {
+  max-width: 300px;
+  font-size: 20px;
+}
+.bottom-text button {
+  width: 150px;
+  padding: 10px;
+  border-radius: 10px;
 }
 .input {
   width: 350px;
@@ -192,6 +265,9 @@
     align-items: center;
     justify-content: center;
   }
+  .bottom-text-container {
+    display: block;
+  }
   .bottom-text {
     width: 100%;
     margin: 40px auto;
@@ -202,12 +278,11 @@
     width: 128px;
     height: 128px;
   }
-  .bottom-text h1 {
+  h1 {
     text-transform: capitalize;
     font-size: 30px;
-    max-width: 50%;
-    line-height: 40px;
-    margin: 0 auto;
+    max-width: 70%;
+    margin: 50px auto 0 auto;
   }
   .bottom-text p {
     max-width: 250px;
