--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -2,7 +2,8 @@
     display: block;
 }
 .menu-links {
-    position: absolute;
+    position: fixed;
+    margin-left: auto;
     right: 0;
     padding: 30px;
     display: flex;
@@ -10,7 +11,7 @@
     justify-content: center;
     align-items: center;
     width: 200px;
-    height: 100%;
+    height: 100vh;
     background: #b23838;
     opacity: .98;
     z-index: 1;
