--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -230,15 +230,16 @@
   .text_content {
     max-width: 350px;
     text-align: center;
+    margin-top: 180px;
   }
   .text_content h2 {
-    font-size: 30px;
-    font-weight: bolder;
+    display: none;
   }
   .text_content p {
-    font-weight: bold;
+    font-weight: 400;
+    font-size: 20px;
     font-weight: 30px;
-    margin-bottom: 40px;
+    margin-bottom: 40px 0;
   }
   .search-container input {
     border-bottom-left-radius: 8px;
