--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -208,7 +208,26 @@
   margin-top: 10px;
   cursor: pointer;
 }
-
+.explore-homes {
+  margin: 70px auto 50px auto;
+  text-align: center;
+}
+.explore-homes h2 {
+  font-size: 50px;
+  font-weight: 700;
+}
+.explore-homes p {
+  width: 500px;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 20px;
+}
+.explore-homes img {
+  width: 90%;
+  height: 250px;
+  margin: 20px auto;
+  border-radius: 10px;
+}
 
 @media screen and (max-width: 768px) {
   .app {
@@ -331,5 +350,12 @@
   .image-container img {
     width: 100%;
     height: 300px;
+  }
+  .explore-homes h2 {
+    font-size: 30px;
+  }
+  .explore-homes p {
+    max-width: 350px;
+    font-size: 18px;
   }
 }
