--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -159,6 +159,7 @@
 }
 .content h1 {
   margin-top: 60px;
+  text-align: center;
 } 
 .bottom-text {
   padding: 0 30px;
@@ -222,13 +223,25 @@
   margin: 0 auto;
   font-size: 20px;
 }
-.explore-homes img {
-  width: 90%;
-  height: 250px;
-  margin: 20px auto;
-  border-radius: 10px;
-}
 
+.image {
+  height: 100%;
+  width: 300px;
+}
+.jMNKZk {
+  width: 500% !important;
+  height: 300px !important;
+}
+.jRFJkP:hover:enabled, .jRFJkP:focus:enabled {
+  background: #b23838 !important;
+}
+.lcUbOd:hover, .lcUbOd:focus {
+  box-shadow: 0 0 1px 3px #000 !important;
+}
+.eaptOe, .lcUbOd {
+  background: #b23838 !important;
+  box-shadow: 0 0 0 0 #b23838 !important;
+}
 @media screen and (max-width: 768px) {
   .app {
     width: 100%;
@@ -357,5 +370,9 @@
   .explore-homes p {
     max-width: 350px;
     font-size: 18px;
+  }
+  .jMNKZk {
+    width: 280% !important;
+    height: 300px !important;
   }
 }
