viewport syling for slider changed 1.0

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -372,7 +372,7 @@
     font-size: 18px;
   }
   .jMNKZk {
-    width: 280% !important;
+    width: 400px !important;
     height: 300px !important;
   }
 }
