--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -371,8 +371,8 @@
     max-width: 350px;
     font-size: 18px;
   }
-  .jMNKZk {
+  /* .jMNKZk {
     width: 400px !important;
     height: 300px !important;
-  }
+  } */
 }
