--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -376,7 +376,7 @@
     width: 100%;
   }
   .jMNKZk {
-    width: 400px !important;
+    width: 300% !important;
     height: 300px !important;
   }
 }
