--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -135,6 +135,8 @@
   border-bottom-left-radius: 10px;
   border: none;
   outline: none;
+  font-size: 20px;
+  padding: 0 10px;
   margin-top: 0;
 }
 .search-container input::placeholder {
@@ -223,10 +225,13 @@
   margin: 0 auto;
   font-size: 20px;
 }
-
+.images {
+  width: 500px;
+  height:400px;
+}
 .image {
   height: 100%;
-  width: 300px;
+  width: 100%;
 }
 .jMNKZk {
   width: 500% !important;
@@ -236,11 +241,12 @@
   background: #b23838 !important;
 }
 .lcUbOd:hover, .lcUbOd:focus {
-  box-shadow: 0 0 1px 3px #000 !important;
+  background: black;
+  box-shadow: 0 0 1px 3px #b23838 !important;
 }
 .eaptOe, .lcUbOd {
   background: #b23838 !important;
-  box-shadow: 0 0 0 0 #b23838 !important;
+  box-shadow: 0 0 0 0 #e7ebf4 !important;
 }
 @media screen and (max-width: 768px) {
   .app {
