--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,20 +1,16 @@
 .slider-container {
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     width: 50%;
     height: 70vh;
-    /* border: 2px solid red; */
-    margin: 0;
+    margin: 0 0 50px 0;
     padding: 0;
-    /* position: relative; */
     overflow: hidden;
 }
 
 .slider {
     min-width: 100%;
     height: 100%;
-    /* position: relative; */
     transition: .5s;
     overflow: hidden;
 }
@@ -33,5 +29,25 @@
     .slider-container {
         width: 80%;
         height: 50vh;
+        position: relative;
+        border-radius: 10px;
+    }
+    .slider {
+        min-height: 100%;
+        min-width: none;
+    }
+    .btn-styles{
+        opacity: .6;
+    }
+    .btn-styles:hover:enabled{
+        opacity: 1;
+    }
+    #goLeft {
+        left: 0px;
+        bottom: 0;
+    }
+    #goRight {
+        right: 0px;
+        bottom: 0;
     }
 }
