--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -35,6 +35,7 @@
     .slider {
         min-height: 100%;
         min-width: none;
+        border-radius: 10px;
     }
     .btn-styles{
         opacity: .6;
